#-----------------------------------------------------------------
# Changes for Module::CPANTS::ProcessCPAN
#-----------------------------------------------------------------


    - re-enabled distgraphs
    - fixed a bug which caused old YAML files to be read. Reported by
      Barbie: http://use.perl.org/comments.pl?sid=37394&cid=58683


0.71    2007-10-29
    - re-added make_graph.pl and update_authors.pl to run.pl
    - fixed prereq/uses DB filling
    - fixed some other DB errors
    - adapted to changes in MC::Analyse 0.75
    - cleaned up analyse_cpan.pl
    - added Module::CPANTS::MyBuild to properly install cpants


0.70    2007-10-24
    - install cpants properly
    - moved to SQLite instead of postgres
    - switched to YAML::Syck
    - added process_yaml.pl
    - dont use DB for analyse_cpan.pl
    - synced DBIx::Class with DB schema


0.64    2007-04-23
    - moved svn repo to http://code.google.com/p/cpants/
    - added DBD::Pg to depencies, reported by MSTEVENS as RT #26377
    - first create a dist object, add the data later in another eval. This
      way more dists should end up in the DB. (eg Lingua-DE-ASCII, which 
      includes latin1 filenames that cause problems in the (utf8) db)


0.63    2006-09-13
    - added new metrics to DB Classes (has_license, has_example,
      buildtool_not_executable, manifest_matches_dist

      
0.62    2006-07-31
    - added t/99_pod.t test (I'm not in the mood right now to write docs
      so t/99_pod_coverage.t has to wait a bit...)
    - adapted DBIx::Class calls to 0.07000
    - delete dist from DB if they are no longer on CPAN
      thanks to BDFOY and TINITA for pointing it out.


0.61    2006-07-20
    - added MCK::BrokenInstaller
    - removed bugs in author hist
    - added --force to analyse_cpan.pl
    - used Getopt::Long in analyse_cpan.pl
    - changed kwalitee to a percentage, added abs_kw
    - added distinction between normal and optional metrics